--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
 	<title>VBO Site - Home</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="images/my_logo.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/landing.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div class="sidenav">
-		<div class="fs-item-container fb">
-			<a href="https://wwww.facebook.com"><i class="fa fa-facebook"></i></a>
+	<div class="fixed-bot-nav">
+		<div class="fixed-bot-nav-item fb">
+			<a href="https://www.facebook.com/profile.php?id=100014384987806" target="_blank"><i class="fa fa-facebook"></i></a>
 		</div>
-		<div class="fs-item-container messenger">
-			<a href="https://www.facebook.com/messages/t/100014384987806"><i class="fa fa-comment"></i></a>
+		<div class="fixed-bot-nav-item messenger">
+			<a href="https://www.facebook.com/messages/t/100014384987806" target="_blank"><i class="fa fa-comment"></i></a>
 		</div>
-		<div class="fs-item-container fb">
-			<a href="https://wwww.facebook.com"><i class="fa fa-facebook"></i></a>
+		<div class="fixed-bot-nav-item google">
+			<a href="https://wwww.facebook.com"><i class="fa fa-google-plus" target="_blank"></i></a>
 		</div>
 	</div>
 
-	<div class="landing text-center">
-		<div class="landing-container">
-			<!-- <img src="image/logo.png"> -->
-			<p style="text-align: right;">#StaySafePH2020</p>
+	<div class="mainpage text-center">
+		<div class="mainpage-container">
+			<p style="text-align: right;">#Bawal_LumabasPH2020</p>
 			<h1><span>Vilma Balderama Obinque</span></h1>
 			<p>
 				IT Student <br>
