--- a/personal.html
+++ b/personal.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>VBO Site - Home</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	<!-- <meta http-equiv="Content-Type" content="text/html; charset=windows-1252"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="images/my_logo.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -45,15 +45,30 @@
 		</div>
 	</div>
 
-	<div class="bgimg-1">
+	<div class="bg-1">
 		<div class="caption">
-			<span class="border">SCROLL DOWN</span>
+			<span class="border">BASIC INFORMATION</span>
 		</div>
 	</div>
 
 	<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-		<h3 style="text-align:center;">Parallax Demo</h3>
-		<p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.</p>
+		<div style="text-align:left; margin-left: 150px;">
+			<h3><b>age:</b> 20</h3>
+			<h3><b>nationality:</b> filipino</h3>
+		</div>
+	</div>
+
+	<div class="bg-1">
+		<div class="caption">
+			<span class="border">BASIC INFORMATION</span>
+		</div>
+	</div>
+
+	<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+		<div style="text-align:left; margin-left: 150px;">
+			<h3><b>age:</b> 20</h3>
+			<h3><b>nationality:</b> filipino</h3>
+		</div>
 	</div>
 </body>
 </html>
