--- a/index.html
+++ b/index.html
@@ -56,5 +56,9 @@
 			</p>
 		</div>
 	</div>
+
+	<footer>
+		<p>All Rights Reserved 2020. #StaySafePinas <br>-Vilma Balderama Obinque-</p>
+	</footer>
 </body>
 </html>
