--- a/personal.html
+++ b/personal.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>VBO Site - Home</title>
-	<!-- <meta http-equiv="Content-Type" content="text/html; charset=windows-1252"> -->
+	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="images/my_logo.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -35,40 +35,81 @@
 
 	<div class="fixed-bot-nav">
 		<div class="fixed-bot-nav-item fb">
-			<a href="https://www.facebook.com/profile.php?id=100014384987806" target="_blank"><i class="fa fa-facebook"></i></a>
+			<a href="https://www.facebook.com/profile.php?id=100014384987806" target="_blank">
+				<i class="fa fa-facebook"></i>
+			</a>
 		</div>
 		<div class="fixed-bot-nav-item messenger">
-			<a href="https://www.facebook.com/messages/t/100014384987806" target="_blank"><i class="fa fa-comment"></i></a>
+			<a href="https://www.facebook.com/messages/t/100014384987806" target="_blank">
+				<i class="fa fa-comment"></i>
+			</a>
 		</div>
 		<div class="fixed-bot-nav-item google">
-			<a href="https://wwww.facebook.com"><i class="fa fa-google-plus" target="_blank"></i></a>
+			<a href="https://wwww.facebook.com">
+				<i class="fa fa-google-plus" target="_blank"></i>
+			</a>
 		</div>
 	</div>
 
 	<div class="bg-1">
+		<div class="caption-overlay"></div>
 		<div class="caption">
-			<span class="border">BASIC INFORMATION</span>
+			<div class="border">
+				<div class="border-details">
+					<span>BASIC INFORMATION</span>
+					<p>sadfsadhfjkdfhsakdfaj</p>
+				</div>
+			</div>
 		</div>
+
+		<div class="caption-img c-1"></div>
 	</div>
 
-	<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-		<div style="text-align:left; margin-left: 150px;">
+	<div class="bg-detail-container">
+		<div class="bg-details">
 			<h3><b>age:</b> 20</h3>
 			<h3><b>nationality:</b> filipino</h3>
 		</div>
 	</div>
 
-	<div class="bg-1">
+	<div class="bg-2">
+		<div class="caption-overlay"></div>
 		<div class="caption">
-			<span class="border">BASIC INFORMATION</span>
+			<div class="border">
+				<div class="border-details">
+					<span>BASIC INFORMATION</span>
+					<p>sadfsadhfjkdfhsakdfaj</p>
+				</div>
+			</div>
 		</div>
+
+		<div class="caption-img c-1"></div>
 	</div>
 
-	<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-		<div style="text-align:left; margin-left: 150px;">
+	<div class="bg-detail-container">
+		<div class="bg-details">
 			<h3><b>age:</b> 20</h3>
 			<h3><b>nationality:</b> filipino</h3>
 		</div>
 	</div>
+
+	<div class="bg-3">
+		<div class="caption-overlay"></div>
+		<div class="caption">
+			<div class="border">
+				<div class="border-details">
+					<span>BASIC INFORMATION</span>
+					<p>sadfsadhfjkdfhsakdfaj</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="caption-img c-1"></div>
+	</div>
+
+
+	<footer>
+		<p>All Rights Reserved 2020. #StaySafePinas <br>-Vilma Balderama Obinque-</p>
+	</footer>
 </body>
 </html>
