--- a/personal.html
+++ b/personal.html
@@ -53,11 +53,22 @@
 
 	<div class="bg-1">
 		<div class="caption-overlay"></div>
-		<div class="caption">
-			<div class="border">
+		<div class="caption" style="top: 30%;">
+			<div class="border" style="background-color: rgba(137, 183, 204, .5);">
 				<div class="border-details">
-					<span>BASIC INFORMATION</span>
-					<p>sadfsadhfjkdfhsakdfaj</p>
+					<span>PERSONAL INFORMATION</span>
+					<hr>
+					<p>
+						<ul>
+							<li>Name: Vilma Balderama Obinque</li>
+							<li>Age: 20</li>
+							<li>Nationality: Filipino</li>
+							<li>Marital Status: Single</li>
+							<li>Language: English and Filipino</li>
+							<li>Current Address: San Gonzalo, Labrador, Pangasinan,</li>
+							<li>Birthplace: Lingayen, Pangasinan</li>
+						</ul>
+					</p>
 				</div>
 			</div>
 		</div>
@@ -74,16 +85,23 @@
 
 	<div class="bg-2">
 		<div class="caption-overlay"></div>
-		<div class="caption">
-			<div class="border">
+		<div class="caption" style="top: 37.5%;">
+			<div class="border" style="background-color: rgba(209,200,115,.5);">
 				<div class="border-details">
-					<span>BASIC INFORMATION</span>
-					<p>sadfsadhfjkdfhsakdfaj</p>
+					<span>HOBBIES</span>
+					<hr>
+					<p>
+						<ul>
+							<li>Online Shopping</li>
+							<li>Reading Wattpad Stories (specifically Sci-Fi Stories)</li>
+							<!-- <li></li> -->
+						</ul>
+					</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="caption-img c-1"></div>
+		<div class="caption-img c-2"></div>
 	</div>
 
 	<div class="bg-detail-container">
@@ -95,16 +113,68 @@
 
 	<div class="bg-3">
 		<div class="caption-overlay"></div>
-		<div class="caption">
-			<div class="border">
+		<div class="caption" style="top: 35.2%;">
+			<div class="border" style="background-color: rgba(203,67,122, .5);">
 				<div class="border-details">
-					<span>BASIC INFORMATION</span>
-					<p>sadfsadhfjkdfhsakdfaj</p>
+					<span>SKILLS</span>
+					<hr>
+					<p>
+						<ul>
+							<li>Baking Cakes, Bread and Pastries<br>(BPP NCII Passer)</li>
+							<li>Auto-CAD</li>
+							<!-- <li></li> -->
+						</ul>
+					</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="caption-img c-1"></div>
+		<div class="caption-img c-3"></div>
+	</div>
+
+	<div class="bg-detail-container">
+		<div class="bg-details">
+			<h3><b>age:</b> 20</h3>
+			<h3><b>nationality:</b> filipino</h3>
+		</div>
+	</div>
+
+	<div class="bg-4">
+		<div class="caption-overlay"></div>
+		<div class="caption" style="top: 21%;">
+			<div class="border" style="background-color: rgba(37,97,151, .5);">
+				<div class="border-details">
+					<span>WORK EXPERIENCE</span>
+					<hr>
+					<p>
+						<ul>
+							<li>Year: 2016 - 2017</li>
+							<li>Production Operator</li>
+							<li>Seien Rubber Pjils. Inc.</li>
+							<li>Blk. 3 Lot 3 People's Technology Complex - <br> Special Economic Zone, Carmona, Philippines</li>
+							<!-- <li></li> -->
+						</ul>
+
+						<ul>
+							<li>Year: 2017 - 2018</li>
+							<li>Production Operator</li>
+							<li>Wyntron Inc.</li>
+							<li>Lot 9 Block 15 Phase 3 EPZA, Rosario, Cavite, Philippines</li>
+							<!-- <li></li> -->
+						</ul>
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="caption-img c-4"></div>
+	</div>
+
+	<div class="bg-detail-container">
+		<div class="bg-details">
+			<h3><b>age:</b> 20</h3>
+			<h3><b>nationality:</b> filipino</h3>
+		</div>
 	</div>
 
 
