--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 			<p>
 				IT Student <br>
 				College of Computing Science <br>
-				Pangasinan State University - Lingayen Campus
+				Pangasinan State University - Lingayen Campus<br>
+				Lingayen, Pangasinan, Philippines 2401 
 			</p>
 		</div>
 	</div>
