--- a/personal.html
+++ b/personal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>VBO Site - Home</title>
+	<title>VBO Site - About</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="images/my_logo.png">
@@ -78,8 +78,7 @@
 
 	<div class="bg-detail-container">
 		<div class="bg-details">
-			<h3><b>age:</b> 20</h3>
-			<h3><b>nationality:</b> filipino</h3>
+			<h3>"Never regret anything that made you smile."</h3>
 		</div>
 	</div>
 
@@ -106,8 +105,7 @@
 
 	<div class="bg-detail-container">
 		<div class="bg-details">
-			<h3><b>age:</b> 20</h3>
-			<h3><b>nationality:</b> filipino</h3>
+			<h3>"Aspire to inspire before we expire."</h3>
 		</div>
 	</div>
 
@@ -134,8 +132,7 @@
 
 	<div class="bg-detail-container">
 		<div class="bg-details">
-			<h3><b>age:</b> 20</h3>
-			<h3><b>nationality:</b> filipino</h3>
+			<h3>"Tough times never last but tough people do."</h3>
 		</div>
 	</div>
 
@@ -172,8 +169,50 @@
 
 	<div class="bg-detail-container">
 		<div class="bg-details">
-			<h3><b>age:</b> 20</h3>
-			<h3><b>nationality:</b> filipino</h3>
+			<h3>"Dream as if you'll live forever, live as if you'll die today."</h3>
+		</div>
+	</div>
+
+	<div class="bg-5">
+		<div class="caption-overlay"></div>
+		<div class="caption" style="top: 12%;">
+			<div class="border" style="background-color: rgba(37,97,151, .5);">
+				<div class="border-details">
+					<span>EDUCATIONAL ATTAINMENT</span>
+					<hr>
+					<p>
+						<ul>
+							<h3 style="color: white; text-decoration: underline;">Tertiary</h3>
+							<li>BS Information Technology</li>
+							<li>Pangasinan State University Lingayen</li>
+							<li>2018-Present</li>
+							<!-- <li></li> -->
+						</ul>
+
+						<ul>
+							<h3 style="color: white; text-decoration: underline;">SECONDARY</h3>
+							<li>The Sisters of Mary of Banneux, Inc. - Cavite</li>
+							<li>2012-2016</li>
+							<!-- <li></li> -->
+						</ul>
+
+						<ul>
+							<h3 style="color: white; text-decoration: underline;">PRIMARY</h3>
+							<li>Calit Elementary School - Binmaley</li>
+							<li>2006-2012</li>
+							<!-- <li></li> -->
+						</ul>
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="caption-img c-5"></div>
+	</div>
+
+	<div class="bg-detail-container">
+		<div class="bg-details">
+			<h3>"Let the beauty of what you love be what you do."</h3>
 		</div>
 	</div>
 
